<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginLeft="@dimen/view_margin_narrow_outer"
  android:layout_marginRight="@dimen/view_margin_narrow_outer"
  tools:context=".LoginAddActivity" >

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login_add_info"
      android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
      android:id="@+id/view_login_add_account"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/login_add_account"
      android:inputType="textEmailAddress"
      android:maxLength="64" >

      <requestFocus />

    </EditText>

    <EditText
      android:id="@+id/view_login_add_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/login_add_password"
      android:inputType="textPassword"
      android:maxLength="64" />

    <LinearLayout
      android:id="@+id/view_login_add_guard"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" >

      <TextView
        android:id="@+id/view_login_add_guard_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

      <EditText
        android:id="@+id/view_login_add_guard_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:hint="@string/login_add_guard_code"
        android:inputType="text"
        android:maxLength="5" />

      <EditText
        android:id="@+id/view_login_add_guard_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_add_guard_name"
        android:inputType="text"
        android:maxLength="64" />

    </LinearLayout>

    <LinearLayout
      android:id="@+id/view_login_add_error_frame"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:ignore="UseCompoundDrawables" >

      <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/error"
        android:src="@android:drawable/stat_notify_error" />

      <TextView
        android:id="@+id/view_login_add_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <Button
      android:id="@+id/view_login_add_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:enabled="false"
      android:onClick="listenerAddOnClick"
      android:text="@string/login_add_button" />

    <TextView
      android:id="@+id/view_login_add_privacy"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login_add_privacy"
      android:textAppearance="?android:attr/textAppearanceSmall" />

  </LinearLayout>

</ScrollView>